# sean-mcmahon.github.io

./: _config.yml  pyproject.toml
_layouts/: post.html
_posts/: 2023-11-08-welcome-to-jekyll.markdown  2023-11-10-confusion-matrices.markdown
code/confusion_matrices/: confusion_matrix.py  confusion_matrix_generator.py  generate_random_classification_results.py  random_classification_results.py
scripts/: create_confusion_matrix_plots.py
src/confusion_matrices/: confusion_matrix.py  confusion_matrix_generator.py  generate_random_classification_results.py  metrics.py
tests/: test_confusion_matrices.py
