[tool.poetry]
name = "sean-mcmahon-github-io"
version = "0.1.0"
description = "Python pacakge for blog"
authors = ["Sean McMahon <sean_mcmahon25@hotmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
